:pencil: [skip-ci] Trigger README

--- a/README.Rmd
+++ b/README.Rmd
@@ -7,7 +7,7 @@ output: github_document
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE, 
-  fig.path = "man/figures/"
+  fig.path = "man/figures/README-"
 )
 ```
 
