:sparkles: Better plotting of randomized pattern

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,8 @@ install.packages("shar")
 And the development version from [GitHub](https://github.com/r-spatialecology/shar) with:
 
 ```{r install-github, eval = FALSE}
-# install.packages("remotes")
+install.packages("remotes")
+
 remotes::install_github("r-spatialecology/shar")
 ```
 
